fixed whitespace at end of contact page

--- a/Assets/styles/Contact.css
+++ b/Assets/styles/Contact.css
@@ -88,7 +88,7 @@ h2, h3{
     background-image: url("../images/World-of-warcraft.jpg");
   
     /* Set a specific height */
-    height: 1000px;
+    height: 1150px;
     min-height: 100% ;
   
     /* Create the parallax scrolling effect */
